# rustflow

docs/: IIoTFlowArchitecture.md  IIoTFlowNodeDevelopmentGuidelines.md  JSONFormatForNode.md  SystemRequirements.md  WASMNodeDevelopmentGuidelines.md  WasmFlowFusionTool.md
docs/spec/: Node Frame Interface.md  frontend_spec.md
iiot-fusion/: .gitignore  Cargo.toml  build_and_run.sh
iiot-fusion/host/: Cargo.toml
iiot-fusion/host/src/: main.rs
iiot-fusion/nodes/.cargo/: config.toml
iiot-fusion/nodes/node-a/: Cargo.toml
iiot-fusion/nodes/node-a/src/: lib.rs
iiot-fusion/nodes/node-b/: Cargo.toml
iiot-fusion/nodes/node-b/src/: lib.rs
iiot-fusion/nodes/node-c/: Cargo.toml
iiot-fusion/nodes/node-c/src/: lib.rs
iiot-fusion/nodes/sink-node/: Cargo.toml
iiot-fusion/nodes/sink-node/src/: lib.rs
iiot-fusion/nodes/source-node/: Cargo.toml
iiot-fusion/nodes/source-node/src/: lib.rs
iiot-fusion/wit/: flow-node.wit  host-api.wit  types.wit
